samples/_failures_safe/1761731696_c61eeb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92faa372.c: In function ‘read_operator’:
./samples/SAFE/__tmp_92faa372.c:156:9: error: expected declaration or statement at end of input
  156 |         if (len < MAX_TOKEN_LEN - 1) {
      |         ^~
./samples/SAFE/__tmp_92faa372.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_92faa372.c:156:9: error: expected declaration or statement at end of input
